--- a/package.json
+++ b/package.json
@@ -13,36 +13,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^6.1.0-beta.2",
-    "@angular/core": "^6.1.0-beta.2",
-    "@angular/forms": "^6.1.0-beta.2",
-    "@angular/http": "^6.1.0-beta.2",
-    "@angular/platform-browser": "^6.1.0-beta.2",
-    "@angular/platform-browser-dynamic": "^6.1.0-beta.2",
-    "@angular/router": "^6.1.0-beta.2",
+    "@angular/common": "^7.1.1",
+    "@angular/core": "^7.1.1",
+    "@angular/forms": "^7.1.1",
+    "@angular/http": "^7.1.1",
+    "@angular/platform-browser": "^7.1.1",
+    "@angular/platform-browser-dynamic": "^7.1.1",
+    "@angular/router": "^7.1.1",
     "@ionic-native/core": "5.0.0-beta.11",
     "@ionic-native/splash-screen": "5.0.0-beta.11",
     "@ionic-native/status-bar": "5.0.0-beta.11",
-    "@ionic/angular": "4.0.0-alpha.7",
-    "@ionic/ng-toolkit": "1.0.0-rc.9",
-    "@ionic/schematics-angular": "1.0.0-rc.9",
+    "@ionic/angular": "4.0.0-beta.17",
+    "@ionic/angular-toolkit": "latest",
     "core-js": "^2.5.3",
-    "rxjs": "6.2.1",
+    "rxjs": "6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.7.0-rc.0",
-    "@angular-devkit/build-angular": "0.7.0-rc.0",
-    "@angular-devkit/core": "0.7.0-rc.0",
-    "@angular-devkit/schematics": "0.7.0-rc.0",
-    "@angular/cli": "^6.1.0-rc.0",
-    "@angular/compiler": "^6.1.0-beta.2",
-    "@angular/compiler-cli": "^6.1.0-beta.2",
-    "@angular/language-service": "^6.1.0-beta.2",
+    "@angular-devkit/architect": "0.11.0",
+    "@angular-devkit/build-angular": "0.11.0",
+    "@angular-devkit/core": "7.1.0",
+    "@angular-devkit/schematics": "7.1.0",
+    "@angular/cli": "7.1.0",
+    "@angular/compiler": "^7.1.1",
+    "@angular/compiler-cli": "^7.1.1",
+    "@angular/language-service": "^7.1.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.3.2",
-    "codelyzer": "~4.3.0",
+    "codelyzer": "4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.2",
@@ -53,7 +52,7 @@
     "protractor": "~5.3.0",
     "ts-node": "~6.1.1",
     "tslint": "~5.10.0",
-    "typescript": "~2.7.2"
+    "typescript": "3.1.6"
   },
   "description": "An Ionic project"
 }
